--- a/src/asset/style/global/color.scss
+++ b/src/asset/style/global/color.scss
@@ -1,2 +1,10 @@
 $color-black: #000;
+$color-black-2: #535353;
+$color-black-3: #969696;
+$color-black-4: #424242;
+$color-grey: #E6E6E6;
+$grey-greyLight: #EEEEEE;
+$color-red: #FF4848;
+$color-blue: #4C29FF;
+$color-cyan: #7CFCE7;
 $color-white: #FFF;
