--- a/src/asset/style/style.scss
+++ b/src/asset/style/style.scss
@@ -47,7 +47,7 @@
   ____) |  __/ (__| |_| | (_) | | | |
  |_____/ \___|\___|\__|_|\___/|_| |_|
 */
-
+@import './view/section/welcome.scss';
 
 
 /*
