--- a/src/asset/style/view/section/welcome.scss
+++ b/src/asset/style/view/section/welcome.scss
@@ -5,7 +5,7 @@
   justify-content: center;
 
   &.home {
-      background-color: rgba($color-cyan,.65);
+      background-color: rgba($color-blue,.65);
   }
 
   &.services,
