Header in progress with burger icon

--- a/src/asset/style/style.scss
+++ b/src/asset/style/style.scss
@@ -37,6 +37,7 @@
                        | |
                        |_|
 */
+@import './view/component/header.scss';
 @import './view/component/menu.scss';
 
 /*
