Add animation header

--- a/src/asset/style/view/section/welcome.scss
+++ b/src/asset/style/view/section/welcome.scss
@@ -55,7 +55,7 @@
   &-subtitle {
       width: 50%;
       color: $color-white;
-      z-index: 1git;
+      z-index: 1;
 
       @include tabletPortrait {
         width: 100%;
