--- a/src/asset/style/global/variable.scss
+++ b/src/asset/style/global/variable.scss
@@ -33,7 +33,8 @@ $mq-mob-portrait: 320px;
 /*
  * Global
  */
-$container: 1440px;
+$container: 1270px;
+$containerLarge: 1440px;
 $containerMargin: 40px;
 $containerMargin-tablet: 25px;
 $containerMargin-mobile: 15px;
