--- a/src/asset/style/view/section/myJob.scss
+++ b/src/asset/style/view/section/myJob.scss
@@ -5,6 +5,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+    @include tabletPortrait {
+      flex-direction: column;
+      align-items: flex-start;
+    }
   }
 
   &-left {
@@ -26,11 +31,19 @@
       margin-top: 20px;
       font-size: 20px;
       line-height: 50px;
+
+      @include tabletPortrait {
+        width: 100%;
+      }
     }
   }
 
   &-right {
     flex: 1;
+
+    @include tabletPortrait {
+      margin-top: 20px;
+    }
 
     a {
       display: flex;
