--- a/src/asset/style/style.scss
+++ b/src/asset/style/style.scss
@@ -48,6 +48,7 @@
   ____) |  __/ (__| |_| | (_) | | | |
  |_____/ \___|\___|\__|_|\___/|_| |_|
 */
+@import './view/section/lastProjects.scss';
 @import './view/section/myJob.scss';
 @import './view/section/welcome.scss';
 
