Section last projects without api

--- a/src/asset/style/global/ui.scss
+++ b/src/asset/style/global/ui.scss
@@ -4,6 +4,10 @@
 
 .ui-button {
 	display: block;
+	padding: 28px 53px;
+	background-color: $color-blue;
+	color: $color-white;
+	text-align: center;
 }
 
 .ui-checkbox {
