--- a/src/asset/style/view/page/project.scss
+++ b/src/asset/style/view/page/project.scss
@@ -23,6 +23,10 @@
     display: flex;
     justify-content: center;
     padding: 40px 0; 
+
+    @include tablet {
+      flex-direction: column-reverse;
+    }
   }
 
   &-infos {
@@ -33,6 +37,14 @@
     color: $color-black-4;
     font-size: 20px;
     line-height: 40px;
+
+    @include tablet {
+      margin-top: 20px;
+    }
+
+    @include tabletPortrait {
+      line-height: 32px;
+    }
   }
 
   &-technos {
@@ -43,8 +55,8 @@
     line-height: 40px;
 
     ul {
-      margin-left: 5px;
-      padding-left: 5px;
+      margin-left: 20px;
+      padding-left: 20px;
       border-left: solid 1px $color-black-4;
     }
   }
@@ -66,23 +78,34 @@
       height: 100%;
       background-color: rgba($color-blue, .10);
       z-index: -1;
+
+      @include tablet {
+        content: initial;
+      }
     }
-    
-    img{
-      display: block;
-      width: 80%;
-      z-index: 1;
+
+    @include tabletPortrait {
+      span {
+        display: block;
+        width: 100%;
+        line-height: unset;
+      }
+  
+      svg {
+        width: 100%;
+        height: 100%;
+      }
     }
   }
 
-  &-link{
+  &-link {
     display: flex;
     align-items: center;
     color: $color-blue;
     text-transform: uppercase;
-  }
 
-  &-arrow{
-    margin-left: 8px;
+    span {
+      margin-right: 8px;
+    }
   }
 }
