Projects is finished

--- a/src/asset/style/style.scss
+++ b/src/asset/style/style.scss
@@ -65,6 +65,7 @@
              |___/
 */
 @import './view/page/project.scss';
+@import './view/page/projects.scss';
 
 /*
   _                             _
