--- a/src/asset/style/style.scss
+++ b/src/asset/style/style.scss
@@ -51,6 +51,7 @@
 */
 @import './view/section/lastProjects.scss';
 @import './view/section/myJob.scss';
+@import './view/section/services.scss';
 @import './view/section/welcome.scss';
 
 
