--- a/src/asset/style/view/section/services.scss
+++ b/src/asset/style/view/section/services.scss
@@ -7,9 +7,21 @@
       justify-content: center;
       align-items: center;
 
+      @include tabletPortrait {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+
       .service{
           flex: 1;
           padding-left: 10px;
+
+          &:not(:first-child) {
+
+            @include tabletPortrait {
+              margin-top: 20px;
+            }
+          }
 
           ul{
               margin-top: 10px;
