--- a/src/asset/style/style.scss
+++ b/src/asset/style/style.scss
@@ -54,6 +54,7 @@
 @import './view/section/myJob.scss';
 @import './view/section/services.scss';
 @import './view/section/skills.scss';
+@import './view/section/vision.scss';
 @import './view/section/welcome.scss';
 
 
