--- a/src/asset/style/style.scss
+++ b/src/asset/style/style.scss
@@ -49,6 +49,7 @@
   ____) |  __/ (__| |_| | (_) | | | |
  |_____/ \___|\___|\__|_|\___/|_| |_|
 */
+@import './view/section/contact.scss';
 @import './view/section/culture.scss';
 @import './view/section/lastProjects.scss';
 @import './view/section/myJob.scss';
