--- a/src/asset/style/style.scss
+++ b/src/asset/style/style.scss
@@ -69,6 +69,7 @@
               __/ |
              |___/
 */
+@import './view/page/contact.scss';
 @import './view/page/project.scss';
 @import './view/page/projects.scss';
 
