Fix background menu

--- a/src/asset/style/global/color.scss
+++ b/src/asset/style/global/color.scss
@@ -6,5 +6,6 @@ $color-grey: #E6E6E6;
 $grey-greyLight: #EEEEEE;
 $color-red: #FF4848;
 $color-blue: #4C29FF;
+$color-blue-2: #a593ff;
 $color-cyan: #7CFCE7;
 $color-white: #FFF;
