--- a/src/asset/style/view/component/menu.scss
+++ b/src/asset/style/view/component/menu.scss
@@ -3,7 +3,7 @@
     bottom: 100%;
     width: 10px;
     height: 100vh;
-    background-color: $color-white;
+    background-color: $color-blue-2;
     z-index: 10;
 
     &-nav {
@@ -20,6 +20,7 @@
         margin-left: -20px;
         font-weight: 700;
         opacity: 0;
+        color: $color-white;
         transform: translateX(-200%);
         transition: opacity 500ms, margin-left 500ms;
 
