--- a/src/asset/style/view/section/lastProjects.scss
+++ b/src/asset/style/view/section/lastProjects.scss
@@ -4,11 +4,53 @@
   &-title {
     display: flex;
     align-items: flex-end;
+    transform: translateY(200%);
 
-    hr{
+    @include tablet {
+      display: none;
+    }
+
+    span {
+      left: 80px;
+    }
+
+    hr {
       width: 67px;
       border: 1px solid $color-black-4;
       margin: auto 23px auto 0;
+    }
+  }
+
+  &-itemWrapper:nth-child(odd) &-item {
+    flex-direction: row-reverse;
+      
+    .s-lastProjects-bg {
+        left: initial;
+        right: -$containerMargin;
+    }
+
+    .s-lastProjects-description {
+
+      p {
+        text-align: left;
+        margin-left: 0;
+      }
+
+      a{
+        width: fit-content;
+        margin: 50px auto 0 0;
+      }
+    }
+
+    .s-lastProjects-itemTitle {
+
+      h4 {
+        flex-direction: row-reverse;
+      }
+
+      hr {
+        margin: auto 0 auto 23px;
+      }
     }
   }
 
@@ -19,49 +61,18 @@
     flex-direction: row;
     margin: 60px 0 0;
     padding: 70px 0 110px;
+    width: 100%;
 
     @include tablet {
       flex-direction: column !important;
-    }
-
-    &:nth-child(odd) {
-      flex-direction: row-reverse;
-      
-      .s-lastProjects-bg {
-          left: initial;
-          right: -$containerMargin;
-      }
-
-      .s-lastProjects-description {
-
-        p {
-          text-align: left;
-          margin-left: 0;
-        }
-
-        a{
-          width: fit-content;
-          margin: 50px auto 0 0;
-        }
-      }
-
-      .s-lastProjects-itemTitle {
-
-        h4 {
-          flex-direction: row-reverse;
-        }
-
-        hr {
-          margin: auto 0 auto 23px;
-        }
-      }
     }
   }
 
   &-bg {
     position: absolute;
-    bottom: 0;
-    height: 100%;
+    bottom: 50%;
+    transform: translateY(50%);
+    height: 90%;
     width: 30%;
     background-color: rgba($color-blue, .10);
     z-index: -1;
@@ -119,6 +130,18 @@
   
   }
 
+  &-imgOverlay {
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background: $color-grey;
+    width: 100%;
+    height: 100%; 
+    transform: skewX(30deg) scale(1.5);
+    z-index: 1;
+  }
+
   &-description {
 
     @include tablet {
@@ -147,5 +170,15 @@
   &-btn {
     width: fit-content;
     margin: 60px auto;
+  }
+
+  .i-desktop {
+    width: 100%;
+    height: 100%;
+
+    svg {
+      width: 100%;
+      height: 100%;
+    } 
   }
 }
