--- a/src/asset/style/view/page/projects.scss
+++ b/src/asset/style/view/page/projects.scss
@@ -49,6 +49,7 @@
       border-radius: 5px;
       opacity: 0;
       transition: all 250ms ease-in-out;
+      pointer-events: none;
     }
     
 
