--- a/src/asset/style/view/page/project.scss
+++ b/src/asset/style/view/page/project.scss
@@ -67,12 +67,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    height: 100%;
 
     &::after{
       content: '';
       position: absolute;
       bottom: -30px;
-      right: 40px;
+      right: 20px;
       display: block;
       width: 80%;
       height: 100%;
