--- a/src/asset/style/view/page/contact.scss
+++ b/src/asset/style/view/page/contact.scss
@@ -30,7 +30,12 @@
   }
 
   &-text {
+    margin-top: 20px;
     text-align: center;
+  }
+
+  form {
+    margin-top: 20px;
   }
 
   &-inputGroup {
@@ -51,8 +56,19 @@
     }
   }
 
-  &-input {
+  &-label {
+    color: $color-blue;
+    opacity: .3;
+    margin-bottom: 10px;
+  }
+
+  &-input,
+  &-textarea {
+    padding: 8px 8px 8px 0;
     width: 100%;
+    border: none;
+    border-bottom: solid 1px $color-blue;
+    background-color: transparent;
   }
 
   fieldset {
@@ -60,6 +76,10 @@
   }
 
   &-textarea {
-    width: 100%;
+    height: 100px;
+  }
+
+  &-btn {
+    margin: 20px 0 0 auto;
   }
 }
