--- a/src/asset/style/view/page/contact.scss
+++ b/src/asset/style/view/page/contact.scss
@@ -1,8 +1,10 @@
 .p-contact {
+  position: relative;
   display: flex; 
   align-items: center;
   justify-content: center;
   height: 100vh;
+  overflow: hidden;
 
   .container {
     max-width: 800px;
