--- a/src/asset/style/view/component/header.scss
+++ b/src/asset/style/view/component/header.scss
@@ -13,8 +13,14 @@
   &-logo {
       height: 38px;
   }
+
+  &-btnWrap {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
   
-  &-burger {
+  &-btn {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -23,6 +29,15 @@
     padding: 5px;
     background-color: $color-blue;
     border-radius: 100%;
+    margin-left: 10px;
+
+    &.is-white {
+      background-color: $color-white;
+    }
+
+    span {
+      line-height: 0;
+    }
   }
 
   &-burgerIcon {
