Add custom cursor

--- a/src/asset/style/style.scss
+++ b/src/asset/style/style.scss
@@ -39,6 +39,7 @@
                        | |
                        |_|
 */
+@import './view/component/cursor.scss';
 @import './view/component/header.scss';
 @import './view/component/menu.scss';
 
