--- a/src/asset/style/global/reset.scss
+++ b/src/asset/style/global/reset.scss
@@ -2,6 +2,7 @@
   outline: none;
   box-sizing: border-box;
   -webkit-overflow-scrolling: touch;
+  cursor: none !important;
 }
 
 *, *:before, *:after {
