--- a/src/asset/style/view/component/header.scss
+++ b/src/asset/style/view/component/header.scss
@@ -18,6 +18,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    
+    span {
+      margin: 0 8px;
+    }
   }
 
   &-translateBtnWrapper,
