--- a/src/asset/style/view/page/contact.scss
+++ b/src/asset/style/view/page/contact.scss
@@ -34,6 +34,8 @@
   &-text {
     margin-top: 20px;
     text-align: center;
+    font-size: 20px;
+    line-height: 30px;
   }
 
   form {
@@ -78,6 +80,7 @@
   }
 
   &-textarea {
+    font-family: Arial, Helvetica, sans-serif;
     height: 100px;
   }
 
