--- a/src/asset/style/view/section/vision.scss
+++ b/src/asset/style/view/section/vision.scss
@@ -33,7 +33,7 @@
             display: flex;
             flex-direction: row-reverse;
             align-items: flex-end;
-            margin-right: 84%;
+            margin-right: 60%;
             white-space:nowrap;
 
             @include tabletPortrait {
@@ -51,9 +51,9 @@
             margin-top: 70px;
         }
 
-        p{
+        a{
             margin-top: 60px;
-            margin-right: 84%;
+            margin-right: 60%;
             padding: 12px 30px;
             background-color: $color-blue;
             color: $color-white;
@@ -78,7 +78,9 @@
         }
 
         p{
-            width: 50%;
+          width: 75%;
+          font-size: 20px;
+          line-height: 30px;
 
             @include tabletPortrait {
               text-align: center;
