--- a/src/asset/style/view/section/lastProjects.scss
+++ b/src/asset/style/view/section/lastProjects.scss
@@ -58,6 +58,7 @@
     position: relative;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     flex-direction: row;
     margin: 60px 0 0;
     padding: 70px 0 110px;
