--- a/src/asset/style/view/section/vision.scss
+++ b/src/asset/style/view/section/vision.scss
@@ -49,6 +49,13 @@
 
         img{
             margin-top: 70px;
+            height: 100%;
+            width: 100%;
+
+            @include tabletPortrait {
+              height: 450px;
+              object-fit: cover;
+            }
         }
 
         a{
