--- a/src/asset/style/view/page/contact.scss
+++ b/src/asset/style/view/page/contact.scss
@@ -64,6 +64,10 @@
     color: $color-blue;
     opacity: .3;
     margin-bottom: 10px;
+
+    @include tabletPortrait {
+      opacity: 1;
+    }
   }
 
   &-input,
