--- a/src/asset/style/view/section/culture.scss
+++ b/src/asset/style/view/section/culture.scss
@@ -51,6 +51,7 @@
                   color: $color-black-4;
                   font-size: 18px;
                   line-height: 30px;
+                  margin-top: 15px;
               }
           }
       }
