--- a/src/asset/style/global/icon.scss
+++ b/src/asset/style/global/icon.scss
@@ -10,7 +10,7 @@
     position: absolute;
     bottom: 50%;
     left: 50%;
-    object-fit: cover;
+    object-fit: contain;
     transform: translate(-50%, 53%);
     border-radius: 7px;
   }
