--- a/src/asset/style/view/component/menu.scss
+++ b/src/asset/style/view/component/menu.scss
@@ -1,7 +1,7 @@
 .c-menu{
     position: fixed;
-    bottom: 100%;
-    width: 10px;
+    bottom: 0;
+    width: 0;
     height: 100vh;
     background-color: $color-blue-2;
     z-index: 10;
@@ -26,6 +26,7 @@
 
         @include tabletPortrait {
           margin-left: 0;
+          opacity: 1 !important;
         }
 
         &:hover {
