--- a/src/asset/style/view/section/lastProjects.scss
+++ b/src/asset/style/view/section/lastProjects.scss
@@ -4,11 +4,6 @@
   &-title {
     display: flex;
     align-items: flex-end;
-    transform: translateY(200%);
-
-    @include tablet {
-      display: none;
-    }
 
     span {
       left: 80px;
@@ -19,6 +14,11 @@
       border: 1px solid $color-black-4;
       margin: auto 23px auto 0;
     }
+  }
+
+  &-description,
+  &-infos {
+    flex: 1;
   }
 
   &-itemWrapper:nth-child(odd) &-item {
