--- a/src/asset/style/view/section/skills.scss
+++ b/src/asset/style/view/section/skills.scss
@@ -85,6 +85,9 @@
 
         .icon{
             margin: 30px;
+            display: flex;
+    align-items: center;
+    justify-content: center;
         }
     }
 }
