--- a/src/asset/style/view/page/contact.scss
+++ b/src/asset/style/view/page/contact.scss
@@ -78,6 +78,7 @@
     border: none;
     border-bottom: solid 1px $color-blue;
     background-color: transparent;
+    border-radius: 0 !important;
   }
 
   fieldset {
