--- a/src/asset/style/view/page/project.scss
+++ b/src/asset/style/view/page/project.scss
@@ -2,6 +2,7 @@
   padding: 90px 0 35px;
 
   &-header {
+    margin-top: 20px;
     padding: 50px 0;
     background-color: rgba($color-blue, .60);
   }
@@ -107,6 +108,21 @@
 
     span {
       margin-right: 8px;
+    }
+  }
+
+  &-back {
+    display: flex;
+    align-items: center;
+    color: $color-blue;
+    text-transform: uppercase;
+
+    span {
+      margin-left: 8px;
+    }
+    
+    svg {
+      transform: rotate(180deg);
     }
   }
 }
