--- a/src/asset/style/view/section/vision.scss
+++ b/src/asset/style/view/section/vision.scss
@@ -27,6 +27,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        height: fit-content;
 
         h3{
             font-weight: 600;
