--- a/src/asset/style/view/section/lastProjects.scss
+++ b/src/asset/style/view/section/lastProjects.scss
@@ -152,8 +152,8 @@
     p{
       text-align: right;
       width: 70%;
-      font-size: 24px;
-      line-height: 154.4%;
+      font-size: 20px;
+      line-height: 40px;
       margin-left: auto;
       margin-right: 0;
 
