--- a/src/asset/style/view/section/skills.scss
+++ b/src/asset/style/view/section/skills.scss
@@ -69,6 +69,7 @@
             color: $color-black-4;
             font-size: 20px;
             font-weight: normal;
+            line-height: 40px;
 
             @include tabletPortrait {
               display: none;
